Add bool IsComplete

--- a/ToDoList/Views/Items/Edit.cshtml
+++ b/ToDoList/Views/Items/Edit.cshtml
@@ -15,6 +15,9 @@
   @Html.LabelFor(model => model.Description)
   @Html.EditorFor(model => model.Description)
 
+  @Html.LabelFor(model => model.IsComplete)
+  @Html.EditorFor(model => model.IsComplete)
+
   @Html.LabelFor(model => model.Category)
   @Html.DropDownList("CategoryId")
 
