--- a/ToDoList/Views/Tags/Details.cshtml
+++ b/ToDoList/Views/Tags/Details.cshtml
@@ -11,7 +11,7 @@
 
 @if(@Model.JoinEntities.Count == 0)
 {
-  <p>This tag does not belong to any items.</p>
+  <p>This tag does not belong to any items</p>
 }
 else
 {
@@ -20,8 +20,16 @@ else
   @foreach(ItemTag join in Model.JoinEntities)
   {
     <li>@join.Item.Description</li>
+    @using (Html.BeginForm("DeleteJoin", "Tags"))
+    {
+      @Html.Hidden("joinId", @join.ItemTagId)
+      <input type="submit" value="Delete"/>
+    }
   }
   </ul>
 }
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
+<p>@Html.ActionLink("Add an Item", "AddItem", new { id = Model.TagId })</p>
+<p>@Html.ActionLink("Edit Tag", "Edit", new { id = Model.TagId })</p>
+<p>@Html.ActionLink("Delete Tag", "Delete", new { id = Model.TagId })</p>
