--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -3,5 +3,7 @@
 }
 
 <h1>Welcome to the To Do List!</h1>
-<p>@Html.ActionLink("See all items", "Index", "Items")</p> <p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
+
+<p>@Html.ActionLink("See all items", "Index", "Items")</p> 
+<p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
 <p>@Html.ActionLink("See all tags", "Index", "Tags")</p>
