--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -6,8 +6,8 @@
 
 <h4>Add a new item</h4>
 
-<p><strong>NOTE:</strong> You need to have at least one category before you can add an item!</p>
-<p>Go to @Html.ActionLink("this page", "Create", "Categories") to create a category.</p>
+<p>@Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
+<p>@Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
 
 @using (Html.BeginForm())
 {
@@ -17,6 +17,6 @@
   @Html.LabelFor(model => model.Category)
   @Html.DropDownList("CategoryId")
 
-  <input type="submit" value="Add new item" class="btn btn-primary" />
+  <input type="submit" value="Add new item" class="btn btn-default" />
 }
 <p>@Html.ActionLink("Show all items", "Index")</p>
